index.css
@import url('https://fonts.googleapis.com/css?family=Noto+Sans');

*, *:before, *:after {
  box-sizing: inherit;
}
html {
  box-sizing: border-box;
  font-size: 16px;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}
a[ng-click] {
  cursor: pointer;
}

body {
  font-family: 'Noto Sans', sans-serif;
  background-color: transparent;
  background-image: url(data:image/gif;base64,R0lGODlhAQABAPAAAN3d3f///yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==);
  background-repeat: repeat-y;
  background-position: top center;
}

.page {
  height: 100vh;
  display: flex;
  flex-direction: column;
}

header, footer {
  width: 100%;
}
header.disabled, footer.disabled {
  background-color: #ddd;
  color: #bbb;
}

header {
  background-color: #fff;
  font-size: 1.416rem;
}

.section-main {
  flex: 1;
  overflow-y: scroll;
  font-size: 2.125rem; /* 34px */
  box-shadow: inset 0px 4px 5px 0px rgba(51,51,51,0.2);
}

.section-main .fa-flex-parent {
  line-height: calc(2.125rem * 1.42857143);
}
.page-settings .section-main {
  background-color: white;
  padding: 4px 8px;
  font-size: .8rem;
}
.page-settings .section-main label {
  font-weight: normal;
}

footer {
  border-top: 1px solid #ddd;
  background-color: #fff;
  
  display: flex;
  flex-direction: column;
}

.footer-row p {
  margin: 0;
  color: #757575;
  font-size: 16px;
  font-weight: normal;
}

/* ------------------------------- */

.fa-sm {
  font-size: 60%;
}

.fa-flex-parent {
  display: inherit;
}
.fa-flex-parent > .fa {
  line-height: inherit;
}

.ledger {
  display: flex;
  flex-wrap: wrap;
}
.ledger-row {
  width: 100%;
  display: flex;
}
.ledger-row-sm {
  font-size: 0.5em;
  color: #aaa;
  border-bottom: 1px solid #eee;
}
.ledger-row-2x {
  font-size: 1.5em;
}
.ledger-row .dollars, .ledger-row .cents {
  flex: 1;
  margin: 0 4px;
}
.ledger-row .dollars {
  text-align: right;
}
.ledger-row .dollars:before {
  content: '$';
  color: #ddd;
}
.ledger-row .cents {
  text-align: left;
}
.ledger-label {
  text-align: center;
  color: #aaa;
  font-size: .8em;
  border-top: 1px solid #eee;
}
.ledger-label:first-child {
  border-top: none;
}
.ledger-label > span {
  width: 100%;
}

.icon-control {
  color: #bbb;
  cursor: pointer;
}

.btn-pad {
  display: flex;
  padding-bottom: 4px;
}
.btn-pad-display {
  margin: 0;
  text-align: right;
  font-size: 28px;
}
.btn-col {
  flex: 1;
  margin: 0 2px;
}
.btn-col > .btn {
  margin-top: 4px;
}
.btn-row-2x {
  height: calc(100% - 4px);
}

.btn-edit {
  position: fixed;
  top: 4px;
  right: 4px;
  border-radius: 50%;
  width: 34px;
  height: 34px;
  padding: 0;
}

.btn-settings {
  position: fixed;
  top: 42px;
  right: 4px;
  border-radius: 50%;
  width: 34px;
  height: 34px;
  padding: 0;
}

